# AutoBiography

./: Dockerfile  README.md  main.py  personal_biography.md  pyproject.toml  railway.toml  requirements.txt  vercel.json
api/: index.py
app/: __init__.py  auth.py  background.py  config.py  idempotency.py  logging.py  main.py
app/bot/: application.py  handlers.py  replies.py  state.py
app/obs/: __init__.py  usage.py
app/pipeline/: __init__.py  orchestrator.py  prompts.py  structure.py  transcribe.py
app/store/: __init__.py  db.py  drive.py  export.py  local_store.py  models.py  repo.py  short_id.py  types.py
biography_output/entries/: HZ7KSW.json
biography_output/text/: HZ7KSW.txt
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: debug_polling.py  download_model.py  dump_from_db.py  run_polling.py  set_webhook.sh
tests/: conftest.py  test_auth.py  test_background.py  test_download_model.py  test_error_handler.py  test_export.py  test_handlers_gate.py  test_idempotency.py  test_logging.py  test_main.py  test_pipeline_error_replies.py  test_replies.py  test_repo.py  test_serverless.py  test_short_id.py  test_smoke.py  test_structure.py  test_transcribe.py  test_transcribe_fallback.py
