[project]
name = "biography-bot"
version = "0.1.0"
description = "Personal Hebrew voice-biography Telegram bot."
requires-python = ">=3.10,<3.13"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-telegram-bot>=21.6",
    "openai>=1.55",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "structlog>=24.4",
    "httpx>=0.27",
    "tenacity>=9.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
ml = [
    # Runtime ML stack. Wheels exist for Python 3.11+ only.
    # Production (Dockerfile) installs these via `uv sync --extra ml`.
    "faster-whisper>=1.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.7",
    "respx>=0.21",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: marks tests that download models or hit the network",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__main__.py"]
